welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: warning: enclosing method run has result type Unit: return value discarded
  return getX()
  ^ColumnByColumn:8: error: type mismatch;
 found   : Unit
 required: Boolean
    res = true
        ^ColumnByColumn:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getX()==a && getY()==b) {
  ^